Jvm配置功能完善